# orm-python

./: README.md  dados.py  pyproject.toml  test.db
