[tool.poetry]
name = "orm-python"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <augusto.van@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
